...

    <Button
        android:id="@+id/sort_button"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:text="Sort"
        app:layout_constraintBottom_toTopOf="@+id/game_list"
        app:layout_constraintTop_toBottomOf="@+id/search_query_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
...
